# smol-cube

./: .gitignore  CMakeLists.txt  CMakePresets.json  launch.vs.json  license.txt  readme.md
.github/workflows/: main.yml
src/: compression_helpers.cpp  compression_helpers.h  filters.cpp  filters.h  main.cpp  smol_cube.cpp  smol_cube.h  smol_cube_conv_app.cpp  smol_cube_viewer_app.cpp  systeminfo.cpp  systeminfo.h
tests/luts/davinci/: DCI-P3 Kodak 2383 D65.cube  Gamma 2.4 to HDR 1000 nits.cube
tests/luts/synthetic/: shaper_3d.cube
